force-app/main/default/objects/House__c/fields/Default_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Default_Picture_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Picture URL</label>
    <type>Url</type>
</CustomField>