force-app/main/default/objects/House__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>