force-app/main/default/objects/House__c/recordTypes/England.recordType-meta.xml
<RecordType>
    <fullName>England</fullName>
    <active>true</active>
    <label>England</label>
</RecordType>