force-app/main/default/objects/House__c/recordTypes/Ireland.recordType-meta.xml
<RecordType>
    <fullName>Ireland</fullName>
    <active>true</active>
    <label>Ireland</label>
</RecordType>